--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.1.0
+alembic==1.13.1
 anyio==4.3.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -29,6 +30,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.1
 Flask==3.0.2
+Flask-Login==0.6.3
 flatbuffers==23.5.26
 fonttools==4.49.0
 fqdn==1.5.1
@@ -73,6 +75,7 @@ keras==2.15.0
 kiwisolver==1.4.5
 lazy_loader==0.3
 libclang==16.0.6
+Mako==1.3.2
 Markdown==3.5.2
 MarkupSafe==2.1.5
 matplotlib==3.8.3
@@ -111,7 +114,9 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pygame==2.5.2
 Pygments==2.17.2
+PyMySQL==1.1.0
 pyparsing==3.1.1
+PyPika==0.48.9
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
@@ -134,13 +139,13 @@ Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
+SQLAlchemy==2.0.28
 stack-data==0.6.3
 tensorboard==2.15.2
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.36.0
-tensorflow-macos==2.15.0
 termcolor==2.4.0
 terminado==0.18.0
 threadpoolctl==3.3.0
@@ -163,4 +168,5 @@ websocket-client==1.7.0
 Werkzeug==3.0.1
 widgetsnbextension==4.0.10
 wrapt==1.14.1
+WTForms==3.1.2
 zipfile36==0.1.3
